fixed text alignment for some text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,13 +31,13 @@ h1 {
     background-color: #4aaaa5;
     color: white;
     font-size: 20px;
-    width: 220px;
+    width: 250px;
     height: 60px;
     padding-top: 30px;
-    padding-left: 40px;
     margin-left: 220px;
     margin-top: 0px;
     float: left;
+    text-align: center;
 }
 ul, li {
     float: left;
@@ -52,6 +52,8 @@ li {
     font-family: Arial, Helvetica, sans-serif;
     list-style: none;
     padding-left: 15px;
+    text-align: center;
+    font-size: 14px;
 }
 li:last-child {
     border-right: none;
